Added stylesheets and frontend scripts

--- a/templates/page.html
+++ b/templates/page.html
@@ -5,10 +5,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Not Yet Implemented</title>
+    <link href="/static/stylesheet.css" rel="stylesheet">
+    <link href="/static/bootstrap.min.css" rel="stylesheet">
 </head>
 
 <body>
     {{ template "content" . }}
+    <script src="/static/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
