--- a/templates/page.html
+++ b/templates/page.html
@@ -6,12 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Not Yet Implemented</title>
     <link href="/static/stylesheet.css" rel="stylesheet">
+
+    <!-- FRONTEND LIBRARY DEPENDENT -->
     <link href="/static/bootstrap.min.css" rel="stylesheet">
+    <!-- FRONTEND LIBRARY DEPENDENT -->
 </head>
 
 <body>
     {{ template "content" . }}
+
+    <!-- FRONTEND LIBRARY DEPENDENT -->
     <script src="/static/bootstrap.bundle.min.js"></script>
+    <!-- FRONTEND LIBRARY DEPENDENT -->
 </body>
 
 </html>
