--- a/static/stylesheet.css
+++ b/static/stylesheet.css
@@ -1,1 +1,14 @@
+main>.container {
+    padding-top: 20px;
+}
 
+body,
+html {
+    font-family: Segoe UI, SegoeUI, Helvetica Neue, Helvetica, Arial, sans-serif;
+    font-weight: 400;
+}
+
+h2,
+h3 {
+    color: rgb(46, 52, 64);
+}
