--- a/static/stylesheet.css
+++ b/static/stylesheet.css
@@ -1,9 +1,13 @@
-main>.container {
-    padding-top: 20px;
-}
-
 body,
 html {
     font-family: Segoe UI, SegoeUI, Helvetica Neue, Helvetica, Arial, sans-serif;
     font-weight: 400;
+}
+
+main>.container {
+    padding-top: 60px;
+}
+
+h1 {
+    border-bottom: 1px solid gainsboro;
 }
