--- a/templates/page.html
+++ b/templates/page.html
@@ -17,9 +17,6 @@
         <div class="container">
             <!-- pb-2 aligns the brand with the other items in the navbar -->
             <a class="navbar-brand pb-2" href="/">Andúril</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent">
-                <span class="navbar-toggler-icon"></span>
-            </button>
             <div class="collapse navbar-collapse" id="navbarContent">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item">
@@ -29,9 +26,16 @@
                         <a class="nav-link" href="/tags">Tags</a>
                     </li>
                 </ul>
+                <form>
+                    <input type="search" class="form-control" placeholder="Search...">
+                </form>
             </div>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent">
+                <span class="navbar-toggler-icon"></span>
+            </button>
         </div>
     </nav>
+
 
     <!-- MAIN -->
     <main>
