Homepage and About page

--- a/templates/page.html
+++ b/templates/page.html
@@ -22,7 +22,7 @@
                         <a class="nav-link" href="/tags">Tags</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/articles/about">About</a>
+                        <a class="nav-link" href="/about">About</a>
                     </li>
                 </ul>
                 <form action="/search" method="GET">
