--- a/templates/page.html
+++ b/templates/page.html
@@ -57,7 +57,7 @@
                 <h1>{{ .ArticleListHeader }}</h1>
                 {{ range .Articles }}
                 <div>
-                    <h4><a href="/articles/{{ .Key }}">{{ .Title }}</a></h3>
+                    <h4><a href="/articles/{{ .Key }}">{{ .Title }}</a></h4>
                     <h6 class="text-secondary">{{ .LastModificationDateMessage }}</h6>
                 </div>
                 {{ end }}
@@ -71,7 +71,7 @@
 
                 {{ if .IsTagListVisible }}
                 <!-- Tag sidebar (list of tags) on the right -->
-                <div class="col-lg-2 d-flex flex-column align-items-stretch flex-shrink-0 bg-white">
+                <div class="col-lg-3 d-flex flex-column align-items-stretch flex-shrink-0 bg-white">
                     <a href="/tags"
                         class="d-flex align-items-center flex-shrink-0 p-3 link-dark text-decoration-none border-bottom">
                         <span class="fs-5">Tags</span>
@@ -87,6 +87,18 @@
                         </a>
                         {{ end }}
                     </div>
+                </div>
+                {{ end }}
+
+                {{ if and .ShowArticleListInsteadOfContent (not .IsTagListVisible) }}
+                <div class="col-lg-5">
+                    {{ range .InterestingTopics }}
+                    <h1>{{ .Title }}</h1>
+                    <blockquote><p>{{ .Description }}</p></blockquote>
+                    {{ range .Articles }}
+                    <h4><a href="/articles/{{ .Key }}">{{ .Title }}</a></h4>
+                    {{ end }}
+                    {{ end }}
                 </div>
                 {{ end }}
 
