Some refactoring work

--- a/templates/page.html
+++ b/templates/page.html
@@ -12,7 +12,7 @@
     <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark">
         <div class="container">
             <!-- pb-2 aligns the brand with the other items in the navbar -->
-            <a class="navbar-brand pb-2" href="/">AMAN</a>
+            <a class="navbar-brand pb-2" href="/">Home</a>
             <div class="collapse navbar-collapse pb-2 pb-lg-0" id="navbarContent">
                 <ul class="navbar-nav me-auto pb-2 pb-lg-0">
                     <li class="nav-item">
