--- a/static/stylesheet.css
+++ b/static/stylesheet.css
@@ -1,6 +1,5 @@
 body, html {
     font-family: Segoe UI, SegoeUI, Helvetica Neue, Helvetica, Arial, sans-serif;
-    font-weight: 400;
 }
 
 main>.container {
@@ -11,14 +10,42 @@ h1 {
     border-bottom: 1px solid gainsboro;
 }
 
-h2 {
-    padding-top: 0.5rem;
-}
-
+h2,
 h3 {
-    padding-top: 0.25rem;
+    padding-top: 0.5rem;
 }
 
 p {
     text-align: justify;
+}
+
+a:link,
+a:visited,
+a:active {
+    text-decoration: none;
+    transition: all 0.3s ease-in-out;
+}
+
+a:link.redtaglink,
+a:visited.redtaglink,
+a:active.redtaglink {
+    text-decoration: none;
+    color: white;
+    background-color: red;
+    padding-left: 0.4rem;
+    padding-right: 0.4rem;
+    transition: all 0.3s ease-in-out;
+}
+
+a:hover {
+    text-decoration: none;
+    color: orange;
+}
+
+a:hover.taglink {
+    text-decoration: none;
+    color: black;
+    background-color: orange;
+    padding-left: 1rem;
+    padding-right: 0.3rem;
 }
